mik-sdk-macros/tests/ui/derive/path_on_enum.stderr
error: Path derive only supports structs. Hint: Use `#[derive(Path)]` on a struct for URL path parameters.
 --> tests/ui/derive/path_on_enum.rs:5:1
  |
5 | / enum PathParams {
6 | |     User,
7 | |     Post,
8 | | }
  | |_^
