mik-sdk-macros/tests/ui/derive/path_on_enum.rs
use mik_sdk_macros::Path;

// Error: Path derive only supports structs
#[derive(Path)]
enum PathParams {
    User,
    Post,
}

fn main() {}
